--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,9 @@
     "action": {
         "default_popup": "popup.html"
     },
+    "icons": {
+        "48": "icons/favicon.ico"
+    },
     "background": {
         "service_worker": "background.js"
     }
