more icons and manifest updated

--- a/manifest.json
+++ b/manifest.json
@@ -22,10 +22,19 @@
         }
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "48": "icons/favicon.ico",
+            "32": "icons/favicon-32x32.png",
+            "16": "icons/favicon-16x16.png",
+            "128": "icons/favicon-128x128.png"
+        }
     },
     "icons": {
-        "48": "icons/favicon.ico"
+        "48": "icons/favicon.ico",
+        "32": "icons/favicon-32x32.png",
+        "16": "icons/favicon-16x16.png",
+        "128": "icons/favicon-128x128.png"
     },
     "background": {
         "service_worker": "background.js"
